api: add declined field to /peers/get_known
